--- a/src/components/sections/compensation-calculator/compensation-calculator.module.css
+++ b/src/components/sections/compensation-calculator/compensation-calculator.module.css
@@ -56,8 +56,8 @@
   --_calcColor: var(--text-primary-light);
 }
 
-.calculatorLink,
-.handbookLink {
+.calculatorBottomLink,
+.handbookBottomLink {
   margin-top: auto;
   padding-top: 3rem;
 }
@@ -68,6 +68,7 @@
   flex-wrap: wrap;
   list-style: none;
   padding: 0;
+  margin-top: 2rem;
 }
 .handbookLinks li {
   padding: 0;
